Subzero. ARM32. Enables obj output.
This CL implements two little pieces of the lowering that are needed
for --filetype=obj support in arm. With this change, spec2k builds and
verifies with --filetype=obj

BUG= https://bugs.chromium.org/p/nativeclient/issues/detail?id=4076
R=kschimpf@google.com, stichnot@chromium.org

Review URL: https://codereview.chromium.org/1651603003 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -478,7 +478,7 @@ endif
 ifeq ($(TARGET),arm32)
   TARGETFLAG=arm32
   SETUP=SetupGccArmOpt
-  SPEC := -O2 --filetype=asm
+  SPEC := -O2 --filetype=obj
 endif
 SPECFLAGS :=
 SPECBUILDONLY := false
