Subzero. Enables moar complex relocation offsets.
This CL allows ConstantRelocatables in to Subzero
have symbolic constants. A symbolic constant is an
assembly label whose value is not known during
lowering, but it is well defined during code
emission.

For example, the following code is now possible in Subzero:

foo:
  push $foo.bar
  jmp target
  nop
  nop
foo.bar:
  ...

BUG=
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1651163002 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -142,8 +142,8 @@ ifdef FORCEASM
   # resulting nexe.  So we just disable those tests for now.
   FORCEASM_XTEST_EXCLUDES = -e x8632,sandbox,test_sync_atomic
   FORCEASM_LIT_PARAM = --param=FORCEASM
-  # x86 sandboxing lit tests are disabled because llvm-mc uses different
-  # relocations for pushing return addresses onto the stack.
+  # x86 sandboxing lit tests are disabled because filetype=asm does not
+  # handle bundle_lock pad-to-end correctly.
   # TODO(jpp): fix this.
   FORCEASM_LIT_TEST_EXCLUDES = --filter='^(?!.*/x86/sandboxing.ll).*'
 else
