Subzero: Fix symbol name mangling. Make flags global.
This cleans up the whole --prefix handling mechanism, so that all mangling is done based on logic in the parser instead of scattered all over the code base.  Another nice side effect is that it allows some getName() style functions to return a const string reference instead of a string copy.

Also, moves ClFlags into a static field of GlobalContext, i.e. makes it global, so that these constant flags can be accessed without having to plumb a GlobalContext object.  Note that some of the ClFlags and ClFlagsExtra plumbing in the compile server classes could be simplified to directly use the corresponding static fields, but this is left mostly as is for now, for when we do a proper separation between core and supplemental flags.

BUG= none
R=jpp@chromium.org

Review URL: https://codereview.chromium.org/1766233002 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -271,6 +271,7 @@ SRCS = \
   IceIntrinsics.cpp \
   IceLiveness.cpp \
   IceLoopAnalyzer.cpp \
+  IceMangling.cpp \
   IceMemory.cpp \
   IceOperand.cpp \
   IceRegAlloc.cpp \
@@ -540,7 +541,7 @@ check-presubmit presubmit:
           DEBUG=1 CHECK_X86_ASM=1 check-unit sb
 # Run lit tests, cross tests, unit tests, and spec2k/x86-32.
 	+make -f Makefile.standalone \
-          check check-spec sb
+          check check-spec
 # Run spec2k/x86-64.
 	+make -f Makefile.standalone \
           TARGET=x8664 check-spec
