--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -413,6 +413,7 @@ $(UNITTEST_OBJS): $(OBJDIR)/unittest/%.o: unittest/%.cpp unittest/*.h \
           -I$(LLVM_SRC_PATH)/utils/unittest/googletest/include \
           -I$(LLVM_SRC_PATH) \
           -DGTEST_HAS_RTTI=0 -DGTEST_USE_OWN_TR1_TUPLE \
+          -Wno-expansion-to-defined \
           $< -o $@
 
 $(OBJS): | $(OBJDIR)
