Subzero: Fix the Makefile for the LLVM build.
https://codereview.chromium.org/1784243006/ added the ALLOW_TIMERS define, and I forgot to add it to Makefile and CMakeLists.txt.

BUG= none
R=jpp@chromium.org

Review URL: https://codereview.chromium.org/1788873004 .

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ if(PNACL_BROWSER_TRANSLATOR)
   -DALLOW_LLVM_CL=0
   -DALLOW_LLVM_IR=0
   -DALLOW_LLVM_IR_AS_INPUT=0
+  -DALLOW_TIMERS=0
   -DALLOW_MINIMAL_BUILD=1
   -DPNACL_BROWSER_TRANSLATOR=1
   )
@@ -25,6 +26,7 @@ else()
   -DALLOW_LLVM_CL=1
   -DALLOW_LLVM_IR=1
   -DALLOW_LLVM_IR_AS_INPUT=1
+  -DALLOW_TIMERS=1
   -DALLOW_MINIMAL_BUILD=0
   -DPNACL_BROWSER_TRANSLATOR=0
   )
