Subzero: Allow Makefile.standalone to build for a single target.
This makes it easier to focus on reducing the translator size.

Enable with e.g.:
  make -f Makefile.standalone MINIMAL=1 SZTARGET=X8664 bloat-sb

BUG= https://bugs.chromium.org/p/nativeclient/issues/detail?id=4362
R=jpp@chromium.org

Review URL: https://codereview.chromium.org/1787143002 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -100,6 +100,16 @@ else
   BASE_CXX_DEFINES += -DALLOW_DUMP=1
 endif
 
+# Restrict to a single supported target.  Current options:
+#   SZTARGET=ARM32
+#   SZTARGET=MIPS32
+#   SZTARGET=X8632
+#   SZTARGET=X8664
+ifdef SZTARGET
+  OBJDIR := $(OBJDIR)+T_$(SZTARGET)
+  BASE_CXX_DEFINES += -DSZTARGET=$(SZTARGET)
+endif
+
 CXX_DEFINES := $(BASE_CXX_DEFINES) -DPNACL_BROWSER_TRANSLATOR=0
 
 ifdef NOASSERT
